[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]

[tool.black]
line-length = 79
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
combine_as_imports = true
force_grid_wrap = false
force_sort_within_sections = true
include_trailing_comma = true
known_first_party = "riposte"
line_length = 79
multi_line_output = 3
use_parentheses = true