[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "riposte"
description="Package for wrapping applications inside a tailored interactive shell."
authors = [
    {name = "Mariusz Kupidura"},
]
dynamic = ["version"]
requires-python = ">= 3.8"
readme = "README.md"
license = {file = "LICENSE"}
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: POSIX",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
]

[project.urls]
Homepage = "https://github.com/fwkz/riposte"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
    "ruff",
    "setuptools_scm",
    "twine",
    "wheel",
]

[tool.setuptools_scm]
write_to = "riposte/_version.py"
write_to_template = "version = \"{version}\"\n"

[tool.ruff]
line-length = 80

[tool.black]
line-length = 80
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
combine_as_imports = true
force_grid_wrap = false
force_sort_within_sections = true
include_trailing_comma = true
known_first_party = "riposte"
line_length = 80
multi_line_output = 3
use_parentheses = true